# GOATd-Kernel

./: .gitignore  BEST_PRACTICE_REGISTRY_BLUEPRINT.md  BLUEPRINT_V2.md  Cargo.toml  DEVLOG.md  FORCE_Y_WHITELIST_BLUEPRINT.md  GUIDE.md  INSTALLER_REPAIR_BLUEPRINT.md  KBUILD_HEADER_REPAIR_BLUEPRINT.md  LICENSE  MASTER_BLUEPRINT.md  PROJECTSCOPE.md  README.md  TESTS_README.md  UNIFIED_NAMING_BLUEPRINT.md  WHITELIST_FIX_BLUEPRINT.md  WORKSPACE_CENTRIC_BLUEPRINT.md  goatdkernel feedback  goatdkernel.sh
assets/: com.goatd.kernel.policy  goatdkernel.desktop
config/: dependencies.json  guardrails.json  makepkg.conf.example  settings.json
docs/: AUR_MAINTAINER_GUIDE.md  BUILD_PIPE_FIX_PLAN.md  BUILD_PIPE_TESTING.md  CONTROLLER_MODULARIZATION_MAP.md  DEVELOPER_GUIDE.md  DYNAMIC_VERSIONING_PLAN.md  Egui Dev Cheat Sheet Research.md  Egui Skill Definition Research.md  KERNEL_PROFILES.md  LIFECYCLE_PIPE_TESTING.md  MPL_ARCHITECTURE.md  PERFORMANCE_METRICS_SPEC.md  PatcherBreakupExamples.md  TEST_SUITE_GUIDE.md  USER_GUIDE.md  scx-tools and scx-scheds
plans/: aur_integration_masterplan.md  first_run_improvement.md  gui_dep_management.md  sudo_ux_flow.md
scripts/: build.sh  check_kernel.sh  install.sh  rebuild.sh  release.sh  setup-caching.sh  verify.sh
src/: error.rs  lib.rs  log_collector.rs  main.rs  models.rs  policy.rs
tests/: comprehensive_feature_realization.rs  config_tests.rs  dynamic_versioning_test.rs  forensic_diagnostic.rs  git_tests.rs  hardware_tests.rs  integration_tests.rs  lifecycle_pipe_integration.rs  logging_integration_test.rs  mpl_integration_test.rs  (+17 more)
(+73 files in other folders)
